--- a/my-app/src/components/TourDetails/TourDetails.css
+++ b/my-app/src/components/TourDetails/TourDetails.css
@@ -12,7 +12,7 @@ h3{
 }
 button{
 
-    margin-left:8%;
+    margin-left:5%;
     border:none;
     text-align: center;
     background-color: #9BA4B5;
@@ -21,4 +21,11 @@ button{
 .b1{
 
     margin-left:40%;
+}
+a{
+    
+    margin-left:8%;
+    text-decoration: none;
+
+
 }
